# dcr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur.yml  dexoron-packages-index.yml  release.yml
docs/: SUMMARY.md
docs/commands/: dcr-add.md  dcr-build.md  dcr-clean.md  dcr-gen.md  dcr-run.md  dcr-test.md  dcr-tree.md
docs/configuration/: build-profiles.md  build-section.md  package-section.md
docs/dependencies-and-build/: compilers-and-linking.md  cross-compilation.md
docs/getting-started/: build-and-run.md
docs/reference-and-help/: cli-reference.md  config-reference.md
packaging/snap/: snapcraft.yaml
src/: config.rs  main.rs
src/cli/: add.rs  build.rs  clean.rs  flag_update.rs  flags.rs  gen.rs  help.rs  init.rs  mod.rs  new.rs  run.rs  test.rs  tree.rs
src/core/: config.rs  registry.rs  workspace.rs
src/core/builder/: common.rs  gas.rs  mod.rs  msvc.rs  nasm.rs  unix_cc.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/utils/: build.rs
tests/: cli_basic.rs  cli_errors.rs
